--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     androidCompileSdkVersion = 29
     androidTargetSdkVersion = 29
     androidBuildToolsVersion = "29.0.3"
-    kotlinVersion = "1.3.61"
+    kotlinVersion = "1.3.72"
   }
 
   repositories {
@@ -13,8 +13,8 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:4.0.0-alpha09"
-    classpath "com.minyushov.gradle:bintray:2.0.0-alpha04"
+    classpath "com.android.tools.build:gradle:4.0.0-beta04"
+    classpath "com.minyushov.gradle:bintray:2.0.0-alpha05"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
