--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     androidMinSdkVersion = 21
     androidCompileSdkVersion = 29
     androidTargetSdkVersion = 29
-    androidBuildToolsVersion = "29.0.3"
-    kotlinVersion = "1.3.72"
+    androidBuildToolsVersion = "30.0.2"
+    kotlinVersion = "1.4.0"
   }
 
   repositories {
@@ -13,8 +13,8 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:4.0.0-beta04"
-    classpath "com.minyushov.gradle:bintray:2.0.0-alpha05"
+    classpath "com.android.tools.build:gradle:4.0.1"
+    classpath "com.minyushov.gradle:bintray:2.0.0"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
