--- a/notificationhubs-lite/build.gradle
+++ b/notificationhubs-lite/build.gradle
@@ -24,21 +24,20 @@ android {
 
   kotlinOptions {
     jvmTarget = "1.8"
-    freeCompilerArgs = ["-XXLanguage:+NewInference"]
   }
 }
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
 
-  implementation "com.squareup.okio:okio:2.5.0"
-  implementation "com.squareup.okhttp3:okhttp:4.5.0"
+  implementation "com.squareup.okio:okio:2.8.0"
+  implementation "com.squareup.okhttp3:okhttp:4.8.1"
 
-  testImplementation "androidx.test.ext:junit-ktx:1.1.2-alpha05"
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
-  testImplementation "org.robolectric:robolectric:4.3.1"
-  testImplementation "com.squareup.okhttp3:mockwebserver:4.5.0"
+  testImplementation "androidx.test.ext:junit-ktx:1.1.2-rc03"
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+  testImplementation "org.robolectric:robolectric:4.4"
+  testImplementation "com.squareup.okhttp3:mockwebserver:4.8.1"
 }
 
 bintray {
@@ -46,7 +45,7 @@ bintray {
   repo = "azure"
   groupId = "com.minyushov.azure"
   artifactId = "azure-notificationhubs-lite"
-  version = "1.0.1"
+  version = "1.0.2"
   vcsUrl = "https://github.com/minyushov/azure-notificationhubs-lite.git"
   license = "Apache-2.0"
   docs = true
