--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,24 @@ buildscript {
     androidMinSdkVersion = 21
     androidCompileSdkVersion = 29
     androidTargetSdkVersion = 29
-    androidBuildToolsVersion = "30.0.2"
-    kotlinVersion = "1.4.0"
+    androidBuildToolsVersion = "30.0.3"
+    kotlinVersion = "1.4.30"
   }
 
   repositories {
-    jcenter()
+    mavenCentral()
     google()
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:4.0.1"
-    classpath "com.minyushov.gradle:bintray:2.0.0"
+    classpath "com.android.tools.build:gradle:7.0.0-alpha07"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
 
 allprojects {
   repositories {
-    jcenter()
+    mavenCentral()
     google()
   }
 }
