--- a/notificationhubs-lite/build.gradle
+++ b/notificationhubs-lite/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.minyushov.bintray'
+apply plugin: 'maven-publish'
+apply plugin: 'signing'
 
 android {
   buildToolsVersion androidBuildToolsVersion
@@ -28,33 +29,84 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
 
-  implementation "com.squareup.okio:okio:2.8.0"
-  implementation "com.squareup.okhttp3:okhttp:4.8.1"
+  implementation "com.squareup.okio:okio:2.10.0"
+  implementation "com.squareup.okhttp3:okhttp:4.9.1"
 
-  testImplementation "androidx.test.ext:junit-ktx:1.1.2-rc03"
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-  testImplementation "org.robolectric:robolectric:4.4"
-  testImplementation "com.squareup.okhttp3:mockwebserver:4.8.1"
+  testImplementation "androidx.test.ext:junit-ktx:1.1.2"
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+  testImplementation "org.robolectric:robolectric:4.5.1"
+  testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 }
 
-bintray {
-  dryRun = false
-  repo = "azure"
-  groupId = "com.minyushov.azure"
-  artifactId = "azure-notificationhubs-lite"
-  version = "1.0.2"
-  vcsUrl = "https://github.com/minyushov/azure-notificationhubs-lite.git"
-  license = "Apache-2.0"
-  docs = true
-  docsSettings {
-    configuration {
-      jdkVersion = 8
-      externalDocumentationLink {
-        url = new URL("https://kotlin.github.io/kotlinx.coroutines/kotlinx-coroutines-core/")
+tasks.register("sourcesJar", Jar) {
+  archiveClassifier = "sources"
+  from(android.sourceSets.main.java.srcDirs)
+}
+
+afterEvaluate {
+  def properties = new Properties()
+  def file = rootProject.file("local.properties")
+  if (file.isFile()) {
+    file.withInputStream { stream ->
+      properties.load(stream)
+    }
+  }
+
+  publishing {
+    publications {
+      maven(MavenPublication) {
+        groupId "io.github.minyushov"
+        artifactId = "azure-notification-hubs"
+        version = "1.1.0"
+
+        from(components.findByName("release"))
+        artifact(tasks.named("sourcesJar"))
+
+        pom {
+          name = artifactId
+          description = "Simple Azure Notification Hubs SDK for Android"
+          url = "https://github.com/minyushov/azure-notificationhubs-lite"
+          developers {
+            developer {
+              id = "minyushov"
+              name = "Semyon Minyushov"
+              email = "minyushov@gmail.com"
+            }
+          }
+          licenses {
+            license {
+              name = "Apache-2.0"
+              url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+            }
+          }
+          scm {
+            connection = "https://github.com/minyushov/azure-notificationhubs-lite.git"
+            developerConnection = "https://github.com/minyushov/azure-notificationhubs-lite.git"
+            url = "https://github.com/minyushov/azure-notificationhubs-lite/tree/master"
+          }
+        }
       }
     }
+    repositories {
+      maven {
+        name "sonatype"
+        url "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+        credentials {
+          username properties["SONATYPE_USER"]
+          password properties["SONATYPE_PASSWORD"]
+        }
+      }
+    }
+  }
+
+  signing {
+    useInMemoryPgpKeys(
+      properties["GPG_KEY_ID"],
+      properties["GPG_KEY"],
+      properties["GPG_PASSWORD"]
+    )
+    sign(publishing.publications)
   }
 }
