--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
   ext {
     androidMinSdkVersion = 21
-    androidCompileSdkVersion = 29
-    androidTargetSdkVersion = 29
-    androidBuildToolsVersion = "30.0.3"
-    kotlinVersion = "1.4.30"
+    androidCompileSdkVersion = 31
+    androidTargetSdkVersion = 30
+    androidBuildToolsVersion = "32.0.0"
+    kotlinVersion = "1.6.10"
   }
 
   repositories {
@@ -13,7 +13,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:7.0.0-alpha07"
+    classpath "com.android.tools.build:gradle:7.1.2"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
   }
 }
