--- a/notificationhubs-lite/build.gradle
+++ b/notificationhubs-lite/build.gradle
@@ -19,30 +19,31 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
   }
 
   kotlinOptions {
-    jvmTarget = "1.8"
+    jvmTarget = "11"
+  }
+
+  publishing {
+    singleVariant("release") {
+      withSourcesJar()
+    }
   }
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
 
-  implementation "com.squareup.okio:okio:2.10.0"
-  implementation "com.squareup.okhttp3:okhttp:4.9.1"
+  implementation "com.squareup.okio:okio:3.0.0"
+  implementation "com.squareup.okhttp3:okhttp:4.9.3"
 
-  testImplementation "androidx.test.ext:junit-ktx:1.1.2"
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-  testImplementation "org.robolectric:robolectric:4.5.1"
-  testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
-}
-
-tasks.register("sourcesJar", Jar) {
-  archiveClassifier = "sources"
-  from(android.sourceSets.main.java.srcDirs)
+  testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.2"
+  testImplementation "org.robolectric:robolectric:4.7.3"
+  testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
 }
 
 afterEvaluate {
@@ -59,10 +60,9 @@ afterEvaluate {
       maven(MavenPublication) {
         groupId "io.github.minyushov"
         artifactId = "azure-notification-hubs"
-        version = "1.1.0"
+        version = "2.0.0"
 
-        from(components.findByName("release"))
-        artifact(tasks.named("sourcesJar"))
+        from(components.release)
 
         pom {
           name = artifactId
