--- a/notificationhubs-lite/build.gradle
+++ b/notificationhubs-lite/build.gradle
@@ -4,8 +4,10 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 android {
-  buildToolsVersion androidBuildToolsVersion
-  compileSdkVersion androidCompileSdkVersion
+  namespace = "com.azure.notifications"
+
+  buildToolsVersion = androidBuildToolsVersion
+  compileSdkVersion = androidCompileSdkVersion
 
   defaultConfig {
     minSdkVersion androidMinSdkVersion
@@ -19,12 +21,12 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_11
-    targetCompatibility JavaVersion.VERSION_11
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
   }
 
   kotlinOptions {
-    jvmTarget = "11"
+    jvmTarget = "17"
   }
 
   publishing {
@@ -35,15 +37,15 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
 
-  implementation "com.squareup.okio:okio:3.0.0"
-  implementation "com.squareup.okhttp3:okhttp:4.9.3"
+  implementation "com.squareup.okio:okio:3.6.0"
+  implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.11"
 
-  testImplementation "androidx.test.ext:junit-ktx:1.1.3"
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.2"
-  testImplementation "org.robolectric:robolectric:4.7.3"
-  testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+  testImplementation "androidx.test.ext:junit-ktx:1.1.5"
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.1"
+  testImplementation "org.robolectric:robolectric:4.11.1"
+  testImplementation "com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11"
 }
 
 afterEvaluate {
@@ -60,7 +62,7 @@ afterEvaluate {
       maven(MavenPublication) {
         groupId "io.github.minyushov"
         artifactId = "azure-notification-hubs"
-        version = "2.0.0"
+        version = "3.0.0"
 
         from(components.release)
 
