--- a/notificationhubs-lite/build.gradle
+++ b/notificationhubs-lite/build.gradle
@@ -20,13 +20,8 @@ android {
     }
   }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-    targetCompatibility JavaVersion.VERSION_17
-  }
-
-  kotlinOptions {
-    jvmTarget = "17"
+  kotlin {
+    jvmToolchain(17)
   }
 
   publishing {
@@ -39,12 +34,12 @@ android {
 dependencies {
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
 
-  implementation "com.squareup.okio:okio:3.8.0"
+  implementation "com.squareup.okio:okio:3.9.0"
   implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.12"
 
   testImplementation "androidx.test.ext:junit-ktx:1.1.5"
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.2"
-  testImplementation "org.robolectric:robolectric:4.11.1"
+  testImplementation "org.robolectric:robolectric:4.12.1"
   testImplementation "com.squareup.okhttp3:mockwebserver:5.0.0-alpha.12"
 }
 
@@ -62,7 +57,7 @@ afterEvaluate {
       maven(MavenPublication) {
         groupId "io.github.minyushov"
         artifactId = "azure-notification-hubs"
-        version = "3.1.0"
+        version = "3.1.1"
 
         from(components.release)
 
